--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
                     <li>Formation inter et intra entreprise</li>
                     <li>Data Analysic</li>
                     <li>Conseil en orientation</li>
-                    <li></li>
+                    <li>Maison d'édition</li>
                 </ul>
             </div>
             <div class="col-md-4 text-center">
