--- a/index.html
+++ b/index.html
@@ -100,26 +100,27 @@
     </div>
     <!-- Section secteur d'activité -->
     <section class="secteur-activite mt-5 container mb-5" id="secteurs">
-        <p class="titre-sec text-uppercase fw-bold">Secteur d'activité</p>
+        <p class="titre-sec text-uppercase fw-bold">Nos services</p>
         <div class="row mx-0">
             <div class="col-md-3 card p-3 ">
                 <i class="fas fa-database"></i>
                 <p class="mt-2 text-uppercase fw-bold">Analyse de données</p>
-                <p>Donner à vos collaborateur une formation sur mesure grâce <br> à nos programmes.</p>
+                <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English.</p>
             </div>
             <div class="col-md-3 card p-3">
                 <i class="fas fa-handshake"></i>
                 <p class="mt-2 text-uppercase fw-bold">Enquetes de Satisfaction</p>
+                <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English.</p>
             </div>
             <div class="col-md-3 card p-3">
                 <i class="fas fa-chart-line"></i>
                 <p class="mt-2 text-uppercase fw-bold">Tableaux de Bord</p>
-                <p>Donner à vos collaborateur une formation sur mesure grâce <br> à nos programmes.</p>
+                <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English.</p>
             </div>
             <div class="col-md-3 card p-3">
                 <i class="far fa-newspaper"></i>
                 <p class="mt-2 text-uppercase fw-bold">Reporting</p>
-                <p>Donner à vos collaborateur une formation sur mesure grâce <br> à nos programmes.</p>
+                <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English.</p>
             </div>
         </div>
 
@@ -172,7 +173,6 @@
                     <li>Formation inter et intra entreprise</li>
                     <li>Data Analysic</li>
                     <li>Conseil en orientation</li>
-                    <li>Maison d'édition</li>
                 </ul>
             </div>
             <div class="col-md-3 text-center">
